--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "backend-master",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,6 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.2.1"
   }
 }
